# OCR-GANG

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  gui.glade  main.c
.github/workflows/: main.yml
source/: common.h
source/GUI/: gui.c  gui.h
source/network/: OCR.c  OCR.h  XOR.c  XOR.h  adam.c  adam.h  cnn.c  cnn.h  conv.c  conv.h  early_stop.c  early_stop.h  fc.c  fc.h  network.c  network.h  pool.c  pool.h  tools.c  tools.h  training.c  training.h  volume.c  volume.h
source/ocr/: ocr.c  ocr.h
source/process/: process.c  process.h
source/sdl/: our_sdl.c  our_sdl.h
source/segmentation/: segmentation.c  segmentation.h
source/training/: augmentation.c  augmentation.h  training.c  training.h
